# airhaum

./: .gitignore  Cargo.toml  README.md  Upload_Code  lisezmoi.md  readme.md
doc/: architecture.md  assistance_gps.md  gestion_du_temps.md  initialisation.md  interface_pi_rc_servos.md  journalisation.md  mission.md  projet.md  protocole_uart_arduino.md  recepteur_rc.md  suivi_projet.md  surete.md
nano/: RcPwm.cpp  RcPwm.h  decode_remontee.sh  decode_remontee_pc.sh  decode_remontee_pi.sh  nano.ino
nano/test_ibus_led/: test_ibus_led.ino
src/: lib.rs
src/capteurs/: fusion_altitude.rs  mod.rs  traitement_imu.rs
src/diagnostiques/: diag_bmp280.rs  diag_gps.rs  diag_mpu9250.rs  diag_taches_capteurs.rs  diag_vl53l0x.rs  mod.rs
src/drivers/: controleur_servo.rs  mod.rs
src/drivers/barometre/: bmp280.rs  calibration.rs  mod.rs
src/drivers/gps/: calibration.rs  mod.rs  ublox.rs  ubx_parser.rs
src/drivers/imu/: calibration.rs  mod.rs  mpu9250.rs
src/drivers/telemetre/: mod.rs  (+2 more)
src/estimation/: attitude.rs  ekf_attitude.rs  ekf_navigation.rs  mod.rs
src/hal/: i2c.rs  i2c_linux.rs  mod.rs  uart.rs  uart_linux.rs
src/interfaces/: barometre.rs  gps.rs  imu.rs  mod.rs  telemetre.rs
src/mission/: etat_machine.rs  mod.rs
src/surete/: mod.rs
src/systeme/: calibration.rs  journalisation.rs  mod.rs
src/taches/: mod.rs  taches_capteurs.rs  taches_estimation.rs  taches_gps.rs  taches_servo.rs
src/types/: constantes.rs  erreurs.rs  etat_capteur.rs  geometrie.rs  messages.rs  mesure_frequence.rs  mod.rs
tests/: capteurs_architecture.rs  capteurs_materiels.rs
(+1 files in other folders)
